[package]
edition = "2021"
name    = "diceps-mock-client"
version = "0.1.0"

[[bin]]
name = "nostd_usb"
path = "./src/bin/main.rs"
test = false
bench = false

[dependencies]
esp-println = { version = "0.13.1", default-features = false, features = [
    "esp32c6",
    "jtag-serial", #
    "critical-section", #
    "colors", #
    "log"] }
critical-section = "1.2.0"
esp-hal = { version = "1.0.0-beta.0", features = [
	"esp32c6",
	"unstable"] }
embedded-io = "0.6.1"
nb = "1.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
